--- a/include/themes.yaml
+++ b/include/themes.yaml
@@ -283,7 +283,7 @@ frontend:
 
           #conditional color
           "$hui-button-card:last-of-type$": |
-            {% if is_state('binary_sensor.sidebar_update_color', 'on') %}
+            {% if is_state('binary_sensor.template_sidebar_update_color', 'on') %}
 
               ha-card, ha-icon {
                 color: rgb(35, 78 ,106) !important;
@@ -560,41 +560,3 @@ frontend:
             ha-entity-marker {
               opacity: 0.5 !important;
             }
-
-        #################################################
-        #                                               #
-        #            CUSTOM LIGHT POPUP CARD            #
-        #                                               #
-        #################################################
-
-        "hui-entities-card$light-popup-card$": |
-          #popup {
-            margin: -2.4em 0 1.4em 0;
-            isolation: isolate;
-          }
-
-          input[type=range] {
-            cursor: grab;
-          }
-
-          #brightnessValue {
-            color: rgba(255, 255, 255, 0.8);
-            margin: 1.3vh 0 0 0;
-            font-size: 2em;
-            font-weight: 400;
-            position: absolute;
-            z-index: 100;
-            font-family: SF Display;
-            letter-spacing: 0.02em;
-            pointer-events: none;
-            mix-blend-mode: difference;
-            text-align: center;
-          }
-
-          #popup>div.range-holder>input[type=range] {
-            --slider-thumb-color: #b4b4b4 !important;
-          }
-
-          #popup>div.range-holder>input[type=range]::-webkit-slider-thumb {
-            cursor: grabbing;
-          }
