Updated to Aug 28, 2021 of Matt's Repo

--- a/include/logger.yaml
+++ b/include/logger.yaml
@@ -21,4 +21,5 @@ logger:
     homeassistant.components.homekit_controller: info
 
   filters:
-    - ".*\sReceiver\sis\soffline:\sYamaha Receiver"
+    homeassistant.components.yamaha.media_player:
+      - "^.* Receiver is offline: Yamaha Receiver$"
