--- a/popup/home_garage.yaml
+++ b/popup/home_garage.yaml
@@ -3,36 +3,18 @@ browser_mod:
   command: popup
   title: Garage Information
   style:
-    hui-grid-card:
-      $hui-entities-card$: |
-        #states {
-          padding-bottom: 0 !important;
-        }
+    hui-vertical-stack-card:
       $hui-history-graph-card$ : |
         .content {
-          padding: 1.8em 2em 1.8em 2em !important;
-        }
-      $hui-glance-card$ : |
-        .entities.no-header {
-          padding-top: 0 !important;
+          padding: 0.2em 1em 1.2em 1.7em !important;
         }
       $: |
         button-card {
-          justify-self: center;
-          margin: 0.8em 0 2.5em 0;
-          width: 100%;
+          align-self: center;
+          padding: 0.5em 0 0.5em 0;
         }
-        #root {
-          grid-gap: 0 !important;
-        }
-        hui-map-card {
-          height: 99.5% !important;
-        }
-
   card:
-    type: grid
-    columns: 1
-    square: false
+    type: vertical-stack
     cards:
       - type: entities
         entities:
